--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": {
     "name": "Andrés Gutiérrez"
   },
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "icon": "img/vscode-essential-logo.png",
   "engines": {
     "vscode": "^1.59.0"
   },
@@ -16,6 +17,46 @@
   },
   "categories": [
     "Extension Packs"
+  ],
+  "keywords": [
+    "auto close tag",
+    "auto rename tag",
+    "better comments",
+    "bracket pair colorizer 2",
+    "change color format",
+    "change case",
+    "code runner",
+    "comment anchors",
+    "copy json path",
+    "vscode duplicate",
+    "easy snippet",
+    "editorconfig",
+    "emmet keybindings",
+    "gi",
+    "gistfs",
+    "githistory",
+    "gitlens",
+    "vscode html css",
+    "hungry delete",
+    "javascriptsnippets",
+    "vscode jumpy",
+    "liveserver",
+    "vsliveshare",
+    "macros",
+    "markdown all in one",
+    "vscode markdownlint",
+    "vscode edge devtools",
+    "partial diff",
+    "path intellisense",
+    "prettier vscode",
+    "vscode scss formatter",
+    "vscode scss",
+    "vscode sort json",
+    "sort lines",
+    "tabout",
+    "toggle",
+    "vscode toggle quotes",
+    "vscode faker"
   ],
   "extensionPack": [
     "formulahendry.auto-close-tag",
