--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Andrés Gutiérrez"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "icon": "img/vscode-essential-logo.png",
   "engines": {
     "vscode": "^1.59.0"
@@ -22,7 +22,6 @@
     "auto close tag",
     "auto rename tag",
     "better comments",
-    "bracket pair colorizer 2",
     "change color format",
     "change case",
     "code runner",
@@ -66,20 +65,22 @@
     "vscode surround",
     "vscode svgviewer",
     "vscode yaml",
-    "dotenv"
+    "dotenv",
+    "directory files",
+    "javascript booster"
   ],
   "extensionPack": [
     "formulahendry.auto-close-tag",
     "formulahendry.auto-rename-tag",
     "mgmcdermott.vscode-language-babel",
     "aaron-bond.better-comments",
-    "coenraads.bracket-pair-colorizer-2",
     "bbugh.change-color-format",
     "wmaurer.change-case",
     "micnil.vscode-checkpoints",
     "formulahendry.code-runner",
     "exodiusstudios.comment-anchors",
     "nidu.copy-json-path",
+    "casperstorm.directory-files",
     "mikestead.dotenv",
     "mrmlnc.vscode-duplicate",
     "inu1255.easy-snippet",
@@ -95,6 +96,7 @@
     "anteprimorac.html-end-tag-labels",
     "jasonlhy.hungry-delete",
     "xabikos.javascriptsnippets",
+    "sburg.vscode-javascript-booster",
     "wmaurer.vscode-jumpy",
     "ritwickdey.liveserver",
     "ms-vsliveshare.vsliveshare",
@@ -117,6 +119,7 @@
     "albert.tabout",
     "rebornix.toggle",
     "britesnow.vscode-toggle-quotes",
+    "visualstudioexptteam.vscodeintellicode",
     "deerawan.vscode-faker",
     "redhat.vscode-yaml"
   ]
