Add more extensions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Andrés Gutiérrez"
   },
-  "version": "1.0.3",
+  "version": "1.0.4",
   "icon": "img/vscode-essential-logo.png",
   "engines": {
     "vscode": "^1.59.0"
@@ -76,11 +76,9 @@
     "aaron-bond.better-comments",
     "bbugh.change-color-format",
     "wmaurer.change-case",
-    "micnil.vscode-checkpoints",
     "formulahendry.code-runner",
     "exodiusstudios.comment-anchors",
     "nidu.copy-json-path",
-    "casperstorm.directory-files",
     "mikestead.dotenv",
     "mrmlnc.vscode-duplicate",
     "inu1255.easy-snippet",
@@ -102,13 +100,11 @@
     "wmaurer.vscode-jumpy",
     "ritwickdey.liveserver",
     "ms-vsliveshare.vsliveshare",
-    "ctf0.macros",
     "yzhang.markdown-all-in-one",
     "davidanson.vscode-markdownlint",
     "silvenon.mdx",
     "ms-edgedevtools.vscode-edge-devtools",
     "dionmunk.vscode-notes",
-    "eg2.vscode-npm-script",
     "christian-kohler.npm-intellisense",
     "ryu1kn.partial-diff",
     "christian-kohler.path-intellisense",
@@ -118,10 +114,9 @@
     "mrmlnc.vscode-scss",
     "richie5um2.vscode-sort-json",
     "tyriar.sort-lines",
-    "yatki.vscode-surround",
     "cssho.vscode-svgviewer",
     "albert.tabout",
-    "rebornix.toggle",
+    "piotrpalarz.vscode-gitignore-generator",
     "britesnow.vscode-toggle-quotes",
     "visualstudioexptteam.vscodeintellicode",
     "deerawan.vscode-faker",
